--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/luxon": "^3.3.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.2.5",
     "typescript": "^5.0.4"
@@ -22,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "luxon": "^3.3.0",
     "mongoose": "^7.2.2"
   }
 }
