--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,13 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.4",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "luxon": "^3.3.0",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "morgan": "^1.10.0"
   }
 }
