--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "uuid": "^9.0.0"
@@ -23,6 +24,7 @@
     "@types/react": "^18.0.37",
     "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^18.0.11",
+    "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
