--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "luxon": "^3.3.0",
     "mongoose": "^7.2.2",
