--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-	"predeploy": "npm run build",
-	"deploy": "gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
@@ -20,6 +20,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.11.2",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "uuid": "^9.0.0"
   },
